try fix clip path on mobile

--- a/styles/components/Footer.module.css
+++ b/styles/components/Footer.module.css
@@ -29,6 +29,11 @@
     clip-path: ellipse(140% 100% at 50% 0%);
     top: -30%;
   }
+
+  @media screen and (max-width: 375px) {
+    clip-path: ellipse(160% 100% at 50% 0%);
+    top: -20%;
+  }
 }
 
 .footerBottom {
